# tuigram

./: .gitignore  BUILD.md  Brewfile  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  settings.example.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  deny-weekly.yml  release.yml
crates/tuigram/: Cargo.toml  README.md
crates/tuigram-core/: Cargo.toml  README.md
crates/tuigram-core/benches/: model_folding.rs
crates/tuigram-core/src/: actions.rs  auth.rs  bridge.rs  chats.rs  client.rs  command_surface.rs  connection.rs  contacts.rs  credentials.rs  files.rs  lib.rs  messages.rs  model.rs  router.rs  sanitize.rs  secret_chats.rs  session.rs  settings.rs  users.rs
crates/tuigram-core/src/messages/: mod.rs  requests.rs  store.rs
crates/tuigram-core/src/model/: chat.rs  content.rs  media.rs  message.rs  mod.rs  richtext.rs  test_support.rs  user.rs
crates/tuigram-fixtures/: Cargo.toml
crates/tuigram-fixtures/src/: lib.rs
crates/tuigram/benches/: chat_list.rs  conversation.rs  wrap.rs
crates/tuigram/examples/: login.rs  repl.rs
crates/tuigram/src/: app.rs  avatar.rs  bootstrap.rs  chat_list.rs  cli.rs  composer.rs  contact_picker.rs  conversation.rs  event.rs  forward.rs  keymap.rs  lib.rs  login.rs  main.rs  mediaform.rs  parity.rs  reactions.rs  richtext.rs  search.rs  secret.rs  settingsform.rs  status.rs  terminal.rs  textinput.rs  ui.rs  wrap.rs
crates/tuigram/src/ui/: render.rs
crates/tuigram/src/ui/render/: chat_list.rs  common.rs  composer.rs  conversation.rs  help.rs  overlays.rs  status.rs  test_support.rs
crates/tuigram/tests/: cli.rs
docs/: README.md  architecture.md  branch-model.md  headless-client.md  login-flow.md  phase6-verification.md  profiling.md  releasing.md  repl-tui-divergences.md  tui.md  wiring.md
docs/research/: app-registration-security.md  ratatui.md  tdlib.md
scripts/: assert-not-linked.ps1  assert-not-linked.sh  bundle-native-deps.sh  check-native-deps.sh
