[workspace]
resolver = "3"
members = ["crates/tuigram-core", "crates/tuigram"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/queq-co/tuigram"
authors = ["queq & co."]
rust-version = "1.96"

# Dependencies shared across crates. Pinned exactly: `tdlib-rs` transitively
# fixes the TDLib version (1.8.61) and the prebuilt tdjson artifact, and TDLib
# has no stable ABI across versions — see docs/research/tdlib.md. Bumps are
# deliberate, tested events. We pull no tdjson source feature here; each crate
# selects one (download-tdlib / local-tdlib / pkg-config) via its own features.
[workspace.dependencies]
tdlib-rs = { version = "=1.4.0", default-features = false }
tokio = { version = "1", default-features = false }
# Stream adapters over tokio channels (BroadcastStream + StreamExt) for the
# TDLib update stream exposed by tuigram-core's bridge.
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
# TUI stack for the `tuigram` binary (Phase 5). Pinned to one crossterm major:
# Ratatui 0.30.x defaults to crossterm 0.29, and mixing crossterm majors gives
# separate event queues + separate raw-mode tracking (lost events, terminal not
# restored on exit). The `event-stream` feature turns terminal input into an
# async Stream feeding the central tokio::select! loop. See research/ratatui.md.
ratatui = { version = "0.30" }
crossterm = { version = "0.29", features = ["event-stream"] }
# Config (de)serialization for ~/.config/tuigram/config.toml (api_id/api_hash).
serde = { version = "1", features = ["derive"] }
toml = { version = "1" }
# OS credential store for the TDLib DB encryption key (#8). Default `v1` feature
# bundles the native backends per target — macOS Keychain, Windows Credential
# Manager, Linux Secret Service (pure-Rust zbus, no system dbus lib to build).
# A 600 key file is the fallback where no keyring is reachable.
keyring = { version = "4" }
# OS CSPRNG for generating the 32-byte DB encryption key (#8).
getrandom = { version = "0.4" }
# Isolated temp dirs for filesystem unit tests (config perms, resolution order).
tempfile = { version = "3" }
# QR encoder for the login QR screen (#86): the `WaitOtherDeviceConfirmation`
# link is drawn as a scannable code. Nayuki's reference implementation — pure
# Rust, zero dependencies, deterministic output (so the render is snapshot-testable).
qrcodegen = { version = "1.8" }

# Project-wide lints. Telegram/TDLib FFI will introduce `unsafe` later; we keep
# it visible (warn, not deny) so every use is a deliberate, reviewed decision.
[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
