[workspace]
resolver = "3"
members = ["crates/tuigram-core", "crates/tuigram", "crates/tuigram-fixtures"]

[workspace.package]
# CalVer (month-based): YYYY.MINOR.MICRO, unpadded so Cargo accepts it as valid
# SemVer (leading zeros are rejected). MINOR is the release month, MICRO the
# patch within it; both crates inherit this via `version.workspace = true`, and
# it flows to TDLib as `application_version` through `tuigram_core::version()`.
version = "2026.7.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/queq-co/tuigram"
authors = ["queq & co."]
rust-version = "1.96"

# Dependencies shared across crates. Pinned exactly: `tdlib-rs` transitively
# fixes the TDLib version (1.8.61) and the prebuilt tdjson artifact, and TDLib
# has no stable ABI across versions — see docs/research/tdlib.md. Bumps are
# deliberate, tested events. We pull no tdjson source feature here; each crate
# selects one (download-tdlib / local-tdlib / pkg-config) via its own features.
[workspace.dependencies]
tdlib-rs = { version = "=1.4.0", default-features = false }
tokio = { version = "1", default-features = false }
# Stream adapters over tokio channels (BroadcastStream + StreamExt) for the
# TDLib update stream exposed by tuigram-core's bridge.
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
# TUI stack for the `tuigram` binary (Phase 5). Pinned to one crossterm major:
# Ratatui 0.30.x defaults to crossterm 0.29, and mixing crossterm majors gives
# separate event queues + separate raw-mode tracking (lost events, terminal not
# restored on exit). The `event-stream` feature turns terminal input into an
# async Stream feeding the central tokio::select! loop. See research/ratatui.md.
# Trimmed off ratatui's defaults (#180): `all-widgets` (pulls in the calendar
# widget, unused), `macros` (the `ratatui_macros` crate, unused), and
# `underline-color` (colored-underline terminal support — we only use the
# plain `Modifier::UNDERLINED` ANSI attribute, in richtext.rs). `layout-cache`
# is kept: it's ratatui-core's internal `Layout::split` memoization, a pure
# perf win with no extra surface.
ratatui = { version = "0.30", default-features = false, features = [
    "crossterm",
    "layout-cache",
] }
crossterm = { version = "0.29", features = ["event-stream"] }
# Local-time rendering for message timestamps (#194) — chrono is already pulled
# in transitively via serde_with (a tdlib-rs dependency), so this adds no new
# crate to the build graph, just promotes it to a direct dependency. Preferred
# over the `time` crate, whose local-offset read is unsound in a multithreaded
# process (this is a tokio app).
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# Config (de)serialization for ~/.config/tuigram/config.toml (api_id/api_hash).
serde = { version = "1", features = ["derive"] }
toml = { version = "1" }
# OS credential store for the TDLib DB encryption key (#8). Default `v1` feature
# bundles the native backends per target — macOS Keychain, Windows Credential
# Manager, Linux Secret Service (pure-Rust zbus, no system dbus lib to build).
# A 600 key file is the fallback where no keyring is reachable.
keyring = { version = "4" }
# OS CSPRNG for generating the 32-byte DB encryption key (#8).
getrandom = { version = "0.4" }
# Isolated temp dirs for filesystem unit tests (config perms, resolution order).
tempfile = { version = "3" }
# QR encoder for the login QR screen (#86): the `WaitOtherDeviceConfirmation`
# link is drawn as a scannable code. Nayuki's reference implementation — pure
# Rust, zero dependencies, deterministic output (so the render is snapshot-testable).
qrcodegen = { version = "1.8" }
# OS clipboard access for "copy the selected message" (`y`, #197). Cross-platform
# (macOS Pasteboard / X11+Wayland / Windows), matching our brew-tap macOS target.
arboard = { version = "3" }
# Readline-style line editing for the headless REPL harness only (#156–#157):
# in-session up/down history and command-name tab completion. `default-features
# = false` drops the file-history + directory helpers, so `DefaultHistory` is the
# in-memory `MemHistory` — command lines (which carry message text and file paths)
# are never written to disk, matching the encrypted-at-rest posture (#8). Harness
# only: pulled in via `dep:rustyline` behind `login-harness`, never in the product
# binary's dependency graph.
rustyline = { version = "18", default-features = false }
# Decodes TDLib's base64-encoded `Minithumbnail.data` (profile-photo mini
# avatars, #201) once at projection time, so nothing downstream re-touches
# base64. Already in the dependency graph transitively; promoted to direct.
base64 = { version = "0.22" }
# Renders the raster mini-avatar bubble (#201) as a Sixel/Kitty/iTerm2 image
# widget. `image-defaults` picks the pure-Rust encoder path instead of the
# default `chafa-dyn`/`chafa-static`, avoiding a system `libchafa` build
# dependency; see docs/research (Stage 2 verification) for why.
ratatui-image = { version = "11", default-features = false, features = ["image-defaults"] }
# Decodes a sender's minithumbnail JPEG bytes into the `DynamicImage`
# `Picker::new_protocol` (#201) needs. Already in the graph transitively via
# `ratatui-image`/`arboard`; promoted to direct since Stage 3 calls
# `image::load_from_memory` itself. Default features include the JPEG codec.
image = { version = "0.25" }
# Draws the generated fallback avatar bubble (#201, Stage 4) for senders with
# no profile-photo minithumbnail: `imageproc` for the accent-color-filled
# `RgbImage` + text drawing, `ab_glyph` as its font-rasterizing backend.
imageproc = { version = "0.25", default-features = false }
ab_glyph = { version = "0.2" }
# Column-width measurement for word-wrapping message bodies and the composer
# (#214, #215) — already in the graph transitively via ratatui; promoted to
# direct since `wrap.rs` calls it to measure display width, not byte/char count.
unicode-width = { version = "0.2" }
# Benchmark harness (#183), dev-only in both crates: baseline numbers for the
# hot paths named in the issue, not wired into default CI (bench noise on
# shared runners is worse than no gate — see each crate's benches/ for how to
# run them locally). `html_reports` gives the `target/criterion/` report the
# closing baseline numbers are read from; async features are all off since
# nothing benched here awaits.
criterion = { version = "0.8", default-features = false, features = ["html_reports", "cargo_bench_support"] }

# Project-wide lints. Telegram/TDLib FFI will introduce `unsafe` later; we keep
# it visible (warn, not deny) so every use is a deliberate, reviewed decision.
[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Function-length is a module-cohesion call, not a lint-hygiene one: today's
# flagged functions (`dispatch`, `from_tdlib`, `run`, render/view builders) are
# single cohesive match/switch bodies, not accidental sprawl. #182 is the
# tracked place to revisit that call as part of its module cohesion review.
too_many_lines = "allow"
# Every cast site reviewed (#179) is domain-bounded in a way clippy can't see
# statically: terminal dimensions and string lengths cast to `u16` (ratatui
# geometry, always far under `u16::MAX`), palette indices bounded by a `%` by
# a small constant, hash functions that intentionally reinterpret bits, values
# already clamped to `>= 0` before the cast, and test-only loop counters/ids.
# Real truncation risk (e.g. a `TDLib` id that could exceed the target width)
# gets a comment and, where warranted, a `try_from`/checked conversion instead
# of relying on this allow — it is a baseline, not a blanket exemption.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

# #179b: ban `.unwrap()` outside tests. Every non-test call site becomes
# `.expect("reason")` describing the invariant that makes the unwrap safe, or
# (where the invariant doesn't actually hold — TDLib response parsing,
# config/session file I/O, user input) proper `Result` propagation instead.
unwrap_used = "warn"

# #184: tuned release profile for shipped binaries. `panic = "abort"` was
# evaluated and deliberately left unset — `Bridge`'s and `Client`'s `Drop`
# impls (bridge.rs, client.rs) join the TDLib receive thread and stop the
# router task on unwind; under `abort` those never run, and a mid-session
# panic can leave TDLib's SQLite database mid-write (see the shutdown note in
# examples/repl.rs). The terminal-restore panic hook (#178) isn't a reason to
# switch, either — it runs before the abort/unwind decision, so it already
# fires under `abort` too.
[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
