[package]
name = "tuigram"
description = "A terminal UI (Ratatui) Telegram client written in Rust."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "tuigram"
path = "src/main.rs"

[features]
# Manual, interactive headless harness (#9, #22; examples/repl.rs). Off by default
# so it is excluded from default CI — it needs a real account and a TTY. It logs
# in and then drops into a stdin REPL that drives the Phase 3 client surface (list
# chats, open a chat, send/reply/edit/delete/read). The async deps it needs are
# now always present (the TUI itself runs on tokio), so this is a build-gate
# marker only. Run it with:
#   cargo run -p tuigram --example repl --features login-harness
login-harness = []

[[example]]
name = "repl"
required-features = ["login-harness"]

[dependencies]
tuigram-core = { path = "../tuigram-core" }
# Async runtime for the central tokio::select! event loop (Phase 5). The TUI is
# I/O-bound on terminal events + core updates, not CPU-bound, but the multi-thread
# runtime lets blocking core work run off the render thread. `time` drives the
# render tick; `sync` carries the mpsc AppEvent channel from core. The headless
# REPL example reuses the same runtime.
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"] }
# StreamExt over crossterm's EventStream (and the core update stream in the REPL).
tokio-stream = { workspace = true }
# Ratatui front-end + crossterm backend (terminal lifecycle, async input events).
ratatui = { workspace = true }
crossterm = { workspace = true }
