[package]
# Published to crates.io as "tuigram-client" — the name "tuigram" was already
# taken by an unrelated crate (a TUI sequence diagram editor). The installed
# *binary* is unaffected and still named `tuigram` (see the [[bin]] section
# below); only the package/crate name changes. See docs/releasing.md.
name = "tuigram-client"
description = "A terminal UI (Ratatui) Telegram client written in Rust."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["telegram", "tui", "ratatui", "terminal", "chat"]
categories = ["command-line-utilities", "asynchronous"]

[lints]
workspace = true

# release.yml's matrix names (linux-x86_64/macos-arm64/windows-x86_64) aren't
# real Rust target triples, and each archive nests the binary one directory
# in (tuigram-<version>-<name>/tuigram) rather than at the archive root — so
# binstall's default {target}-keyed template can't resolve any of our
# artifacts without explicit per-triple overrides.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/tuigram-{ version }-linux-x86_64.{ archive-format }"
bin-dir = "tuigram-{ version }-linux-x86_64/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/tuigram-{ version }-linux-x86_64.tar.gz"
bin-dir = "tuigram-{ version }-linux-x86_64/{ bin }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/tuigram-{ version }-linux-arm64.tar.gz"
bin-dir = "tuigram-{ version }-linux-arm64/{ bin }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/tuigram-{ version }-macos-arm64.tar.gz"
bin-dir = "tuigram-{ version }-macos-arm64/{ bin }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/tuigram-{ version }-windows-x86_64.zip"
bin-dir = "tuigram-{ version }-windows-x86_64/{ bin }{ binary-ext }"
pkg-fmt = "zip"

[[bin]]
name = "tuigram"
path = "src/main.rs"

[features]
# Manual, interactive headless harness (#9, #22; examples/repl.rs). Off by default
# so it is excluded from default CI — it needs a real account and a TTY. It logs
# in and then drops into a stdin REPL that drives the Phase 3 client surface (list
# chats, open a chat, send/reply/edit/delete/read). The async deps it needs are
# now always present (the TUI itself runs on tokio), so this is a build-gate
# marker only. Run it with:
#   cargo run -p tuigram-client --example repl --features login-harness
# Pulls in rustyline (readline editing + command completion, #156–#157) solely
# for the example; a default `cargo build --workspace` never compiles it.
login-harness = ["dep:rustyline"]
# Forwards to tuigram-core's `static` feature (#167): release builds pass
# `--features tuigram-client/static` on the binary crate rather than reaching
# into a dependency's feature namespace (`--features tuigram-core/static`). Statically
# links tdjson into the binary; OpenSSL/zlib/libc++ remain dynamic per-target
# runtime deps — see docs/research/tdlib.md.
static = ["tuigram-core/static"]

[[example]]
name = "repl"
required-features = ["login-harness"]

[dependencies]
# NOTE: the `version` requirement is NOT kept in sync automatically by
# `version.workspace = true` (that only equalizes the two crates' own package
# versions) — bump this by hand alongside every workspace version bump, or
# tuigram-client's crates.io publish will fail to resolve. See docs/releasing.md.
tuigram-core = { version = "=2026.7.1", path = "../tuigram-core" }
# Async runtime for the central tokio::select! event loop (Phase 5). The TUI is
# I/O-bound on terminal events + core updates, not CPU-bound, but the multi-thread
# runtime lets blocking core work run off the render thread. `time` drives the
# render tick; `sync` carries the mpsc AppEvent channel from core. The headless
# REPL example reuses the same runtime.
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"] }
# StreamExt over crossterm's EventStream (and the core update stream in the REPL).
tokio-stream = { workspace = true }
# Ratatui front-end + crossterm backend (terminal lifecycle, async input events).
ratatui = { workspace = true }
crossterm = { workspace = true }
# Local-time message timestamps (#194).
chrono = { workspace = true }
# QR encoder for the login QR screen (#86): renders the device-confirmation link
# as a scannable code in the terminal.
qrcodegen = { workspace = true }
# OS clipboard for "copy the selected message" (`y`, #197).
arboard = { workspace = true }
# Readline editing + command-name tab completion for the headless REPL example
# only (#156–#157). Optional and pulled in solely by the `login-harness` feature
# (`dep:rustyline` above), so a default `cargo build --workspace` never compiles it.
rustyline = { workspace = true, optional = true }
# Raster mini-avatar bubbles (#201): Picker/Protocol lifecycle for rendering
# real photos as Sixel/Kitty/iTerm2 images in the conversation pane.
ratatui-image = { workspace = true }
# Decodes a sender's minithumbnail JPEG bytes before handing them to
# `Picker::new_protocol` (#201).
image = { workspace = true }
# Generated fallback avatar bubble for senders with no profile photo (#201).
imageproc = { workspace = true }
ab_glyph = { workspace = true }
# Display-column measurement for word-wrapping (#214, #215).
unicode-width = { workspace = true }
